--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body{
 	text-align:center;
 	width:900px;
 }
+p {
+	font-family:inherit;
+	font-size:12px;
+	background-color: green;
+}
 
 h1{
 	font-size: 20px;
